--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -18,3 +18,28 @@ body {
   max-width: 320px;
   margin-bottom: 16px;
 }
+
+ul {
+  list-style: none;
+}
+
+.item__style {
+  display: flex;
+  align-items: center;
+}
+
+.text {
+  margin-left: 10px;
+}
+
+.style {
+  display: flex;
+  align-items: center;
+}
+
+.title {
+  font-size: 1.7em;
+  margin-left: 10px;
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
